; ModuleID = '/home/carl/AnghaBench/vlc/src/posix/extr_dirs.c_config_GetAppDir.c'
source_filename = "/home/carl/AnghaBench/vlc/src/posix/extr_dirs.c_config_GetAppDir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"XDG_%s_HOME\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"%s/vlc\00", align 1
@.str.2 = private unnamed_addr constant [10 x i8] c"%s/%s/vlc\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i8*)* @config_GetAppDir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @config_GetAppDir(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @strlen(i8* %12)
  %14 = sext i32 %13 to i64
  %15 = add i64 10, %14
  %16 = call i8* @llvm.stacksave()
  store i8* %16, i8** %7, align 8
  %17 = alloca i8, i64 %15, align 16
  store i64 %15, i64* %8, align 8
  %18 = trunc i64 %15 to i32
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @snprintf(i8* %17, i32 %18, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* %19)
  %21 = call i8* @getenv(i8* %17)
  store i8* %21, i8** %9, align 8
  %22 = load i8*, i8** %9, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %31

24:                                               ; preds = %2
  %25 = load i8*, i8** %9, align 8
  %26 = call i32 (i8**, i8*, i8*, ...) @asprintf(i8** %6, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8* %25)
  %27 = icmp eq i32 %26, -1
  br i1 %27, label %28, label %29

28:                                               ; preds = %24
  store i8* null, i8** %6, align 8
  br label %29

29:                                               ; preds = %28, %24
  %30 = load i8*, i8** %6, align 8
  store i8* %30, i8** %3, align 8
  store i32 1, i32* %10, align 4
  br label %45

31:                                               ; preds = %2
  %32 = call i8* (...) @config_GetHomeDir()
  store i8* %32, i8** %11, align 8
  %33 = load i8*, i8** %11, align 8
  %34 = icmp eq i8* %33, null
  br i1 %34, label %40, label %35

35:                                               ; preds = %31
  %36 = load i8*, i8** %11, align 8
  %37 = load i8*, i8** %5, align 8
  %38 = call i32 (i8**, i8*, i8*, ...) @asprintf(i8** %6, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.2, i64 0, i64 0), i8* %36, i8* %37)
  %39 = icmp eq i32 %38, -1
  br i1 %39, label %40, label %41

40:                                               ; preds = %35, %31
  store i8* null, i8** %6, align 8
  br label %41

41:                                               ; preds = %40, %35
  %42 = load i8*, i8** %11, align 8
  %43 = call i32 @free(i8* %42)
  %44 = load i8*, i8** %6, align 8
  store i8* %44, i8** %3, align 8
  store i32 1, i32* %10, align 4
  br label %45

45:                                               ; preds = %41, %29
  %46 = load i8*, i8** %7, align 8
  call void @llvm.stackrestore(i8* %46)
  %47 = load i8*, i8** %3, align 8
  ret i8* %47
}

declare dso_local i32 @strlen(i8*) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @snprintf(i8*, i32, i8*, i8*) #1

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @asprintf(i8**, i8*, i8*, ...) #1

declare dso_local i8* @config_GetHomeDir(...) #1

declare dso_local i32 @free(i8*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
